Switch to Java 8 base 64 encoding method